--- a/index.html
+++ b/index.html
@@ -3,28 +3,29 @@
 
     <head>
         <title>Rock_Paper_Scissors</title>
+        <link rel="stylesheet" href="styles/Rock_Paper_Scissors.css">
     </head>
 
     <body>
-        <p>Rock Paper Scissors</p>
+        <p class="title">Rock Paper Scissors</p>
 
-        <button onclick="
+        <button class="move_button" onclick="
            playGame('rock');
-        ">Rock</button>
+        "><img class="move_icon" src="images/rock-emoji.png"></button>
 
-        <button onclick="
+        <button class="move_button" onclick="
            playGame('paper');
-        ">Paper</button>
+        "><img class="move_icon" src="images/paper-emoji.png"></button>
 
-        <button onclick="
+        <button class="move_button" onclick="
             playGame('scissors');
-        ">Scissors</button>
+        "><img class="move_icon" src="images/scissors-emoji.png"></button>
        
-        <p class="move">You: NULL || Computer: NULL</p>
+        <p class="move">You: <img class="move_icon" src="images/rock-emoji.png"> || Computer: <img class="move_icon" src="images/scissors-emoji.png"></p>
         <p class="result"></p>
         <p class="scores"></p>
 
-        <button onclick="
+        <button class="reset_button" onclick="
             score.wins = 0;
             score.losses = 0;
             score.ties = 0;
@@ -34,97 +35,7 @@
             document.querySelector('.result').innerHTML = '';
         ">Reset</button>
 
-        <script>
-            const score = JSON.parse(localStorage.getItem('score')) || {
-                wins: 0,
-                losses: 0,
-                ties: 0
-            };
-            // if (!score) {
-            //     score = {
-            //         wis: 0,
-            //         losses: 0,
-            //         ties: 0
-            //     };
-            // }
-
-            update();
-
-            function update() {
-                document.querySelector('.scores').innerHTML =
-                 `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`;
-            }
-
-            function pickComputerMove() {
-                const randomNumber = Math.random();
-                // 0 <= num < 1
-                let computerMove;
-                if (randomNumber >= 0 && randomNumber < 1/3) {
-                    computerMove = 'rock';
-                }
-                else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-                    computerMove = 'paper';
-                }
-                else if (randomNumber >= 2/3 && randomNumber < 1) {
-                    computerMove = 'scissors';
-                }
-                console.log(computerMove);
-                return computerMove;
-            }
-
-            function playGame(playerMove) {
-                let computerMove = pickComputerMove();
-                let result;
-                if (playerMove === 'rock') {
-                    if (computerMove === 'rock') {
-                        result = 'Tie.';
-                    }
-                    else if (computerMove === 'paper') {
-                        result = 'Lose.';
-                    }
-                    else if (computerMove === 'scissors') {
-                        result = 'Win.';
-                    }
-                }
-                else if (playerMove === 'paper') {
-                    if (computerMove === 'rock') {
-                        result = 'Win.';
-                    }
-                    else if (computerMove === 'paper') {
-                        result = 'Tie.';
-                    }
-                    else if (computerMove === 'scissors') {
-                        result = 'Lose.';
-                    }
-                }
-                else if (playerMove === 'scissors') {
-                    if (computerMove === 'rock') {
-                        result = 'Lose.';
-                    }
-                    else if (computerMove === 'paper') {
-                        result = 'Win.';
-                    }
-                    else if (computerMove === 'scissors') {
-                        result = 'Tie.';
-                    }
-                }
-                if (result === "Win.") {
-                    score.wins += 1;
-                }
-                else if (result === "Lose.") {
-                    score.losses += 1;
-                }
-                else if (result === "Tie.") {
-                    score.ties += 1;
-                }
-
-                localStorage.setItem('score', JSON.stringify(score));
-                document.querySelector('.result').innerHTML = result;
-                document.querySelector('.move').innerHTML = 
-                `You: ${playerMove} || Computer: ${computerMove}`;                
-                update();
-            }
-        </script>
+        <script src="JavaScript/Rock_Paper_Scissors.js"></script>
     </body>
 
 </html>
